--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<mat-toolbar class="footer">
+  <p>Desenvolvido com <i class="material-icons">favorite</i> por <a href="">Gabriel Duarte</a></p>
+</mat-toolbar>
