--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar class="header mat-elevation-z4">
-  <a>Home</a>
+  <a class="logo">Home</a>
   <ul class="title-group">
     <li>
       <a href="">
        <i class="material-icons">home</i>
-       Aplicação CRUD
+       Início
       </a>
     </li>
   </ul>
