--- a/frontend/src/app/views/home/home.component.html
+++ b/frontend/src/app/views/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<mat-card class="home mat-elevation-z3">
+  <mat-card-title class="title">Bem vindo!</mat-card-title>
+  <mat-card-subtitle class="subtitle">Sistema para exemplificar a construção de um cadastro em Angular</mat-card-subtitle>
+</mat-card>
