--- a/frontend/src/app/components/template/nav/nav.component.html
+++ b/frontend/src/app/components/template/nav/nav.component.html
@@ -11,6 +11,6 @@
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="content">
-    <app-home></app-home>
+    <app-product-crud></app-product-crud>
   </mat-sidenav-content>
 </mat-sidenav-container>
