feat(routes): create and link a route between components

--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="header mat-elevation-z4">
-  <a class="logo">Home</a>
+  <a class="logo" routerLink="">Home</a>
   <ul class="title-group">
     <li>
       <a href="">
