feat(directive): create and style a tag with a attribute directive

--- a/frontend/src/app/components/template/footer/footer.component.html
+++ b/frontend/src/app/components/template/footer/footer.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar class="footer">
-  <p>Desenvolvido com <i class="material-icons">favorite</i> por <a href="">Gabriel Duarte</a></p>
+  <p>Desenvolvido com <i class="material-icons" appRed>favorite</i> por <a appRed href="">Gabriel Duarte</a></p>
 </mat-toolbar>
