feat(product): create a Service

--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -1,1 +1,3 @@
 <p>product-create works!</p>
+<button class="saveBtn" mat-raised-button (click)="createProduct()">Salvar</button>
+<button mat-raised-button (click)="cancel()">Cancelar</button>
