feat(products): create a form to POST into backend a new product

--- a/frontend/src/app/components/product/product-create/product-create.component.css
+++ b/frontend/src/app/components/product/product-create/product-create.component.css
@@ -2,3 +2,18 @@
   background: #3f51b5;
   color: #fff;
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  font-size: 1.6rem;
+}
+
+button {
+  margin-top: 20px;
+}
+
+button + button {
+  margin-left: 10px;
+}
