--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -3,8 +3,12 @@
 html,
 body {
   height: 100%;
+}
+
+html {
   font-size: 62.5%;
 }
+
 body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
@@ -19,4 +23,11 @@ body {
 
 .material-icons {
   vertical-align: middle;
+}
+
+.snackbar {
+  background: #3f51b5;
+  color: #fff;
+  height: 80px;
+  font-size: 1.6rem;
 }
