feat(product): create a read component for product API

--- a/frontend/src/app/components/product/product-create/product-create.component.html
+++ b/frontend/src/app/components/product/product-create/product-create.component.html
@@ -8,7 +8,7 @@
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput placeholder="Preço" autocomplete="off" [(ngModel)]="product.price" name="price">
+      <input matInput placeholder="Preço" type="number" autocomplete="off" [(ngModel)]="product.price" name="price">
     </mat-form-field>
   </form>
 
