feat(product): create a method in service to delete a product from API

--- a/frontend/src/app/components/product/product-update/product-update.component.html
+++ b/frontend/src/app/components/product/product-update/product-update.component.html
@@ -12,6 +12,6 @@
     </mat-form-field>
   </form>
 
-  <button class="saveBtn" mat-raised-button (click)="updateProduct()">Salvar</button>
+  <button class="saveBtn" mat-raised-button (click)="updateProduct()">Alterar</button>
   <button mat-raised-button (click)="cancel()">Cancelar</button>
   </mat-card>
