feat(product): create component to delete a product

--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -22,7 +22,7 @@
           <i class="material-icons">edit</i>
         </a>
 
-        <a routerLink="" class="delete">
+        <a routerLink="/products/delete/{{ row.id }}" class="delete">
           <i class="material-icons">delete</i>
         </a>
       </td>
