feat(header): create a dynamic title for each app view

--- a/frontend/src/app/components/template/header/header.component.html
+++ b/frontend/src/app/components/template/header/header.component.html
@@ -2,9 +2,9 @@
   <a class="logo" routerLink="">Home</a>
   <ul class="title-group">
     <li>
-      <a href="">
-       <i class="material-icons">home</i>
-       Início
+      <a routerLink="{{ routeUrl }}">
+       <i class="material-icons">{{ icon }}</i>
+       {{ title }}
       </a>
     </li>
   </ul>
